# C2Serve

./: CMakeLists.txt  FindC2Serve.cmake  System.cmake
c2s-core/: C2SStringUtils.h
c2s-example/: CMakeLists.txt
c2s-example/client/: C2SExampleClientMain.cpp  CMakeLists.txt
c2s-example/server/: C2SExampleRestMethodPrototypeSayHello.cpp  C2SExampleRestMethodPrototypeSayHello.h  C2SExampleServerMain.cpp  CMakeLists.txt
c2s-htdocs/: Basic.css  example_get.html  getting_started.html  license.html  overview.html  server_startup.html  what_is_rest.html
c2s-http/: C2SHttpHeaderFields.cpp  C2SHttpParser.cpp  CMakeLists.txt
c2s-http/test/: C2STestHttpBasic.cpp  CMakeLists.txt
c2s-rest/: C2SRestParameter.h  C2SRestResourceDescriptionHeader.cpp  C2SRestResourcePrototype.cpp  C2SRestResourcePrototype.h  CMakeLists.txt
c2s-rest/api/: C2SRestMethodDescription.cpp  C2SRestMethodDescription.h  C2SRestPathSegmentDescription.h  C2SRestResourceAPIDocumentCreateDefaultStyles.cpp  C2SRestResourceAPIDocumentCreateDefaultStyles.h  C2SRestResourceAPIDocumentException.h  C2SRestResourceAPIDocumentHTML.cpp  C2SRestResourceAPIDocumentHTML.h  C2SRestResourceAPIDocumentHTMLBody.cpp  C2SRestResourceAPIDocumentHTMLBody.h  C2SRestResourceAPIDocumentHTMLHeader.cpp  C2SRestResourceAPIDocumentHTMLHeader.h  C2SRestResourceAPIDocumentHTMLMethodOverview.cpp  C2SRestResourceAPIDocumentHTMLMethodOverview.h  C2SRestResourceAPIDocumentStylesClass.cpp  C2SRestResourceAPIDocumentStylesClass.h  C2SRestResourceAPIDocumentStylesList.cpp  C2SRestResourceAPIDocumentStylesList.h  C2SRestResourceDescription.h
c2s-rest/description/: C2SRestResourceDescription.cpp  C2SRestResourceDescription.h  C2SRestResourceDescriptionCreateDefaultStyles.cpp  C2SRestResourceDescriptionCreateDefaultStyles.h  C2SRestResourceDescriptionException.h  C2SRestResourceDescriptionHTMLHeader.cpp  C2SRestResourceDescriptionHTMLHeader.h  C2SRestResourceDescriptionHeader.h  C2SRestResourceDescriptionStylesClass.cpp  C2SRestResourceDescriptionStylesClass.h  C2SRestResourceDescriptionStylesList.cpp  C2SRestResourceDescriptionStylesList.h
c2s-rest/test/: C2STestRest.cpp  C2STestRestCheckServerResponses.cpp  C2STestRestFixture.cpp  C2STestRestFixture.h  C2STestRestMethodPUT.cpp  C2STestRestResourceAPIDocumentHTML.cpp  C2STestRestResourceAPIDocumentHTML.h  C2STestRestResourceAPIDocumentHTMLBody.cpp  C2STestRestResourceAPIDocumentHTMLBody.h  C2STestRestResourceAPIDocumentHTMLHeader.cpp  C2STestRestResourceAPIDocumentHTMLHeader.h  C2STestRestResourceAPIDocumentStyles.cpp  C2STestRestResourceAPIDocumentStyles.h  C2STestRestResourceDescription.cpp  C2STestRestResourceDescription.h  C2STestRestResourceDescriptionHeader.cpp  C2STestRestResourceDescriptionHeader.h  C2STestRestResourceDescriptionStyles.cpp  C2STestRestResourceDescriptionStyles.h  CMakeLists.txt  c2s_test_expected_html_body  c2s_test_expected_html_header
c2s-socket/: C2SSocketInfo.h
c2s-test/: CMakeLists.txt
c2s-util/: FileNotFoundException.h  FileUtils.cpp  StringUtils.h
